z-index bug fixed

--- a/css/index.css
+++ b/css/index.css
@@ -137,6 +137,7 @@ nav {
     background-color: #ffffff;
     font-size: 1.2em;
     line-height: 1.5em;
+    z-index: 9;
 }
 .link{
     padding-left: 1%;
